--- a/web.html
+++ b/web.html
@@ -6,21 +6,23 @@ web sayfam
 </head>
 <body background="C:\Users\hanen\Desktop\خلفية-بيضاء-ساده-وصور-٥.jpeg" width=100 height=100>
 <font name="arial"color="red"> <marquee> web sayfama hoş geldiniz </marquee> </font>
-<img src="C:\Users\hanen\Desktop\1331133.png"width=100 height=100>
-<p><table border="2" >
+<img  src="WhatsApp Image 2024-01-12 at 21.37.06_c493a85e.jpg"width=100 height=100>
+<table border="2" >
+  <p>
 <tr>
-<td><h3><i>AD:YEMEN<P>SOYAD:YUSUF <p> Doğum Tarihi:12.07.2001 <p> Doğum Yeri:Suriye <p> Yaşadığı Ülke:Türkiye</td></i>
+<td><i><h3>AD:YEMEN<P>SOYAD:YUSUF </P><p> Doğum Tarihi:12.07.2001 </p><p> Doğum Yeri:Suriye </p><p> Yaşadığı Ülke:Türkiye</p></h3></i></td>
 
-<td><h3> <U>İletişim Bilgileri: </u> </h3> <h4>Telefon:05377840438</h4> <p><h3> Adres:Gaziantep</h3> <P><h3>mail: <a href="yemen2001.im12@gmail.com">yemen2001.im12@gmail.com </a></h3> <p><h3> Instagram: <a href="https://www.instagram.com/yemen._.yusuf7?igsh=azdiMDQ3aTRreHdj"> yemen._.yusuf7</a></td>
-
+<td><h3> <U>İletişim Bilgileri: </u> </h3> <h4>Telefon:05377840438</h4> <p><h3> Adres:Gaziantep</h3></p> <P><h3>mail: <a href="yemen2001.im12@gmail.com">yemen2001.im12@gmail.com </a></h3></P>
+  <p><h3> Instagram: <a href="https://www.instagram.com/yemen._.yusuf7?igsh=azdiMDQ3aTRreHdj"> yemen._.yusuf7</a></H3></p></td>
 </tr>
+  </p>
 </table>
-<h3> <u><font color="red" ><b>Eğtim Bilgileri</u></font></u></b></h3>
+<h3> <u><font color="red" ><b>Eğtim Bilgileri</font></u></u></b></h3>
 
-<h3> Hasan ali yücel anadolu lisesinde okudu <p>Okuduğu Üniversite:Gaziantep Islam Bilim Ve Teknoloji Üniversitesi</h3>
-BÖLÜM: Elektrik Elektronik Müh.</h3>
+<h3> Hasan ali yücel anadolu lisesinde okudu <p>Okuduğu Üniversite:Gaziantep Islam Bilim Ve Teknoloji Üniversitesi</p></h3>
+<h3> BÖLÜM: Elektrik Elektronik Müh.</h3>
 <h3>İlerde ilgilenmek istediğim alan: Yazılım</h3>
-<h4> Hakkımda Daha Fazla Bilgi Almak İçin Tıklayın👉 <a href="file:///C:/Users/hanen/Desktop/bilgi.html"> BİLGİLERİM </h4> </a>
+<h4> Hakkımda Daha Fazla Bilgi Almak İçin Tıklayın👉 <a href="> BİLGİLERİM </h4> </a>
 <u><h2><font color="red" ><B> Bilgisayar yetenekleri</B></u></font></u></h1>
 
 <ol>
