--- a/web.html
+++ b/web.html
@@ -17,12 +17,12 @@ web sayfam
 </tr>
   </p>
 </table>
-<h3> <u><font color="red" ><b>Eğtim Bilgileri</font></u></u></b></h3>
+<h3> <b> <u><font color="red" >Eğtim Bilgileri</font></u></u></b></h3>
 
 <h3> Hasan ali yücel anadolu lisesinde okudu <p>Okuduğu Üniversite:Gaziantep Islam Bilim Ve Teknoloji Üniversitesi</p></h3>
 <h3> BÖLÜM: Elektrik Elektronik Müh.</h3>
 <h3>İlerde ilgilenmek istediğim alan: Yazılım</h3>
-<h4> Hakkımda Daha Fazla Bilgi Almak İçin Tıklayın👉 <a href="> BİLGİLERİM </h4> </a>
+<h4> Hakkımda Daha Fazla Bilgi Almak İçin Tıklayın👉 <a href="> BİLGİLERİM </a> </h4>
 <u><h2><font color="red" ><B> Bilgisayar yetenekleri</B></u></font></u></h1>
 
 <ol>
@@ -35,7 +35,7 @@ web sayfam
 <font face="arial" > HTML</font></u>
 <B><SUB>ÖĞRENCİ NUMARASI</SUB>
 210001040 <SUP> BİLIŞİM ÖDEVİ</SUP></B>
-<p>
+</p>
 
 <a name= "Yemen">yemen </a>
 <a href="#Yemen">başadön</a>
