--- a/web.html
+++ b/web.html
@@ -4,7 +4,7 @@
 web sayfam 
 </title>
 </head>
-<body background="C:\Users\hanen\Desktop\خلفية-بيضاء-ساده-وصور-٥.jpeg" width=100 height=100>
+<body background="خلفية-بيضاء-ساده-وصور-٥.jpeg" width=100 height=100>
 <font name="arial"color="red"> <marquee> web sayfama hoş geldiniz </marquee> </font>
 <img  src="WhatsApp Image 2024-01-12 at 21.37.06_c493a85e.jpg"width=100 height=100>
 <table border="2" >
@@ -17,13 +17,13 @@ web sayfam
 </tr>
   </p>
 </table>
-<h3> <b> <u><font color="red" >Eğtim Bilgileri</font></u></u></b></h3>
+<h3> <b> <u><font color="red" >Eğtim Bilgileri</font></u></b></h3>
 
 <h3> Hasan ali yücel anadolu lisesinde okudu <p>Okuduğu Üniversite:Gaziantep Islam Bilim Ve Teknoloji Üniversitesi</p></h3>
 <h3> BÖLÜM: Elektrik Elektronik Müh.</h3>
 <h3>İlerde ilgilenmek istediğim alan: Yazılım</h3>
-<h4> Hakkımda Daha Fazla Bilgi Almak İçin Tıklayın👉 <a href="> BİLGİLERİM </a> </h4>
-<u><h2><font color="red" ><B> Bilgisayar yetenekleri</B></u></font></u></h1>
+<h4> Hakkımda Daha Fazla Bilgi Almak İçin Tıklayın👉 <a href="> "BİLGİLERİM" </a></h4>
+<h1> <b> <u><font color="red" > Bilgisayar yetenekleri</font></u></b></h1>
 
 <ol>
 
@@ -36,7 +36,7 @@ web sayfam
 <B><SUB>ÖĞRENCİ NUMARASI</SUB>
 210001040 <SUP> BİLIŞİM ÖDEVİ</SUP></B>
 </p>
-
+</ol>
 <a name= "Yemen">yemen </a>
 <a href="#Yemen">başadön</a>
 
